--- a/Myerp/Tpl/Xiaoshou/printzituan.html
+++ b/Myerp/Tpl/Xiaoshou/printzituan.html
@@ -60,7 +60,7 @@ td {
     <thead style="display:table-header-group;">
       <tr>
         <td width="210" align="left"><img src="<{:__PUBLIC__}>/gulianstyle/images/dlgllogo.jpg" width="210" height="50" /></td>
-        <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $this->tVar['user']['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $this->tVar['user']['telnum']</php> <br />  
+        <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $login_user['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $login_user['telnum']</php> <br />  
           公司地址：<php>echo cookie('_usedbumenaddr')</php> 
           传真：<php>echo cookie('_usedbumenfax')</php>  </span></td>
       </tr>
@@ -152,7 +152,7 @@ td {
       </tr>
       <tr>
         <td width="239" align="center"><img src="<{:__PUBLIC__}>/gulianstyle/images/logo_p.gif" width="239" height="34" border="0" /></td>
-        <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $this->tVar['user']['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $this->tVar['user']['telnum']</php> <br />  
+        <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $login_user['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $login_user['telnum']</php> <br />  
           公司地址：<php>echo cookie('_usedbumenaddr')</php> 
           传真：<php>echo cookie('_usedbumenfax')</php>  </span></td>
       </tr>
