--- a/Myerp/Tpl/Chanpin/baoming.html
+++ b/Myerp/Tpl/Chanpin/baoming.html
@@ -174,7 +174,7 @@ function ajaxalert(title){
         <tr>
             <td align="left" style="height: 27px; width: 156px;">收客人：</td>
             <td align="left" style="height: 32px">
-            	<input type="text" style="width:50px;" name="owner" id="owner" value="<php>echo $this->tVar['user']['title']</php>">
+            	<input type="text" style="width:50px;" name="owner" id="owner" value="<php>echo $login_user['title']</php>">
             </td>
             <td align="left" style="height: 27px; width: 156px;">所属部门：</td>
             <td align="left" style="height: 32px">
