--- a/Myerp/Tpl/Dijie/print_dingfang.html
+++ b/Myerp/Tpl/Dijie/print_dingfang.html
@@ -33,7 +33,7 @@ td	{ padding:7px 0;}
     <td align="center"><img src="<{:__PUBLIC__}>/gulianstyle/images/logo_p.gif" width="480" height="80" border="0" /></td>
     </tr>
   <tr>
-        <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $this->tVar['user']['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $this->tVar['user']['telnum']</php> <br />  
+        <td width="480" align="center"><span class="gl_td_line">联系人：<php>echo $login_user['title']</php>&nbsp;&nbsp; 联系电话：<php>echo $login_user['telnum']</php> <br />  
           公司地址：<php>echo cookie('_usedbumenaddr')</php> 
           传真：<php>echo cookie('_usedbumenfax')</php>  </span></td>
     </tr>
