--- a/Myerp/Tpl/Qianzheng/baoming.html
+++ b/Myerp/Tpl/Qianzheng/baoming.html
@@ -159,7 +159,7 @@ function ajaxalert(title){
             </select>（提成依据）</td>
             <td align="left" style="height: 27px; width: 156px;">收客人及所属部门：</td>
             <td align="left" style="height: 32px">
-            	<input type="text" style="width:50px;" name="owner" id="owner" value="<php>echo $this->tVar['user']['title']</php>">
+            	<input type="text" style="width:50px;" name="owner" id="owner" value="<php>echo $login_user['title']</php>">
               <select name="departmentID">
               <php>foreach($bumenfeilei as $v){</php>
                 <option value="<{$v['bumenID']}>"><{$v['title']}></option>
