Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -294,6 +294,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <li> <a href="<{:SITE_INDEX}>B2CManage/zituanlist">网店子团控管</a> </li>
       <li> <a href="<{:SITE_INDEX}>B2CManage/zituanlist/second_confirm/1">二次确认子团管理</a> </li>
       <li> <a href="<{:SITE_INDEX}>B2CManage/dingdanlist">电商订单管理</a> </li>
+      <li> <a href="<{:SITE_INDEX}>B2CManage/dingdanlist/second_confirm/1">二次确认订单管理</a> </li>
       <li> <a href="<{:SITE_INDEX}>B2CManage/dingzhixinxi">电商定制信息</a> </li>
     </ul>
     
